@@ -17,8 +17,6 @@ http://sf.net/pm/?group_id=105292
 THESE SHOULD HAPPEN BEFORE THE NEXT RELEASE
 -------------------------------------------
 
-* fix top -u
-
 * investigate/quell "A view does not exist" if you run ae without
   anything displayed.
 
