@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2009-03-XX  Release 7.14.4                                     ---
 ----------------------------------------------------------------------
 
+* mged 'tops' command -g and -u options are deprecated - Sean Morrison
 * added -Ap plot visualization option to mged gqa command - Bob Parker
 * added new 'gqa' quantitative analysis command to mged - Bob Parker
 * fixed mged view initialization bugs - Bob Parker
